# core

./: CMakeLists.txt  DEPENDENCIES  Makefile  NO_CHANGES_NEEDED.md  OPTIMIZATION_REPORT.md  PERFORMANCE_ANALYSIS.md  README.markdown  TASK_COMPLETION_NOTE.md  TASK_COMPLETION_NOTES.md  config.cmake.in  vendorpull.mask
.github/workflows/: ci.yml
cmake/: FindZLIB.cmake
src/core/gzip/: CMakeLists.txt  gzip.cc
src/core/gzip/include/sourcemeta/core/: gzip.h
src/core/json/: json_value.cc
src/core/json/include/sourcemeta/core/: json_error.h  json_hash.h  (+1 more)
src/core/jsonld/: CMakeLists.txt  jsonld.cc  precomputed_answers.inc
src/core/jsonld/include/sourcemeta/core/: jsonld.h
src/core/jsonpointer/: CMakeLists.txt  jsonpointer.cc  stringify.h
src/core/jsonschema/: bundle.cc  frame.cc  jsonschema.cc  resolver.cc  transformer.cc
src/core/uri/: uri.cc
src/core/yaml/: CMakeLists.txt  cheat_table.h  internal_helpers.h  parser.h  yaml.cc
src/core/yaml/_internal_engine/include/: yaml.h
src/core/yaml/_internal_engine/src/: yaml_private.h
src/core/yaml/include/sourcemeta/core/: yaml.h  yaml_diagnostics.h  yaml_error.h
src/extension/alterschema/: CMakeLists.txt  alterschema.cc
src/extension/alterschema/canonicalizer/: exclusive_maximum_integer_to_maximum.h  exclusive_minimum_integer_to_minimum.h  type_union_implicit.h
src/extension/alterschema/common/: maximum_real_for_integer.h  minimum_real_for_integer.h
src/extension/alterschema/linter/: unnecessary_allof_ref_wrapper.h
src/lang/numeric/: CMakeLists.txt  big_coefficient.h  decimal.cc
test/alterschema/: CMakeLists.txt  alterschema_api_test.cc  alterschema_lint_2019_09_test.cc  alterschema_lint_2020_12_test.cc  alterschema_lint_draft0_test.cc  alterschema_lint_draft1_test.cc  alterschema_lint_draft2_test.cc  alterschema_lint_draft3_test.cc  alterschema_lint_draft4_test.cc  alterschema_lint_draft6_test.cc  alterschema_lint_draft7_test.cc  alterschema_test_utils.h  schema_transformer_test.cc  transformer_test.cc  unnecessary_allof_ref_wrapper_test.cc
test/gzip/: gzip_test.cc
test/json/: CMakeLists.txt  json_decimal_test.cc  json_error_test.cc  json_file_parse_error_optimization_test.cc  json_file_parse_error_path_test.cc  json_file_parse_error_test.cc  json_object_test.cc  json_parse_error_test.cc  json_string_test.cc  json_string_trim_test.cc  json_value_test.cc
test/jsonld/: CMakeLists.txt  jsonld_expand_error_test.cc  jsonld_expand_test.cc  jsonld_suite.cc  jsonld_test.cc  test.cc
test/jsonpointer/: CMakeLists.txt  jsonpointer_hash_test.cc  jsonpointer_json_auto_test.cc  jsonpointer_parse_test.cc  jsonpointer_pattern_properties_test.cc  jsonpointer_pointer_test.cc  jsonpointer_separate_compilation_test.cc  jsonpointer_stringify_test.cc  jsonpointer_to_uri_test.cc  jsonpointer_weakpointer_test.cc  test_pointer_hash.cc
test/jsonschema/: CMakeLists.txt  jsonschema_bundle_draft0_test.cc  jsonschema_bundle_draft1_test.cc  jsonschema_bundle_draft2_test.cc  jsonschema_bundle_draft3_test.cc  jsonschema_bundle_test.cc  jsonschema_error_test.cc  jsonschema_frame_draft4_test.cc  jsonschema_frame_test.cc  jsonschema_identify_test.cc  jsonschema_map_resolver_legacy_test.cc  jsonschema_map_resolver_test.cc  jsonschema_references_to_perf_test.cc  jsonschema_relativize_test.cc  jsonschema_schema_map_resolver_reidentify_test.cc  jsonschema_transform_rules.h  jsonschema_transformer_introspection_test.cc  jsonschema_transformer_iterate_test.cc  jsonschema_transformer_iteration_test.cc  jsonschema_transformer_iterator_test.cc  jsonschema_transformer_iterators_test.cc  jsonschema_transformer_test.cc  jsonschema_unknown_dialect_errors_test.cc  jsonschema_wrap_test.cc  resolver_reidentify_test.cc
test/numeric/: decimal_ibm_dectest.cc  numeric_decimal_test.cc  numeric_uint128_test.cc
test/time/: gmt_test.cc
test/uri/: CMakeLists.txt  uri_canonicalize_test.cc  uri_empty_test.cc  uri_fragment_mutator_test.cc  uri_fragment_test.cc  uri_path_test.cc  uri_rebase_optimization_test.cc  uri_test.cc  uri_to_path_test.cc
test/yaml/: yaml_parse_test.cc  yamltestsuite.cc
(+10 files in other folders)
